--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "xstream": "^10.3.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack --config webpack.config.js",
-    "test": "mocha --colors --require babel-register src/**/**.test.js",
-    "build": "NODE_ENV=production webpack --config webpack.config.js"
+    "start": "node scripts/start.js",
+    "test": "node scripts/test.js",
+    "build": "node scripts/build.js"
   }
 }
