--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babili-webpack-plugin": "0.0.11",
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
-    "mocha": "^3.2.0",
+    "jest": "^19.0.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "snabbdom-pragma": "^1.7.0",
     "typescript": "^2.2.1",
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "test": "node scripts/test.js",
+    "test": "jest --watchAll --coverage",
     "build": "node scripts/build.js"
   }
 }
