--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "olpefi",
+  "name": "meeting-price-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://olpeh.github.io/meeting-price-calculator",
   "devDependencies": {
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/dev-server2": "^0.4.0",
@@ -32,13 +33,16 @@
     "@cycle/isolate": "^2.1.0",
     "@cycle/run": "^3.0.0",
     "@cycle/time": "^0.7.3",
+    "gh-pages": "^0.12.0",
     "tslint": "^4.5.1",
     "xstream": "^10.3.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "test": "node scripts/test.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
