--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@cycle/isolate": "^2.1.0",
     "@cycle/run": "^3.0.0",
     "@cycle/time": "^0.7.3",
+    "cycle-onionify": "^3.3.0",
     "gh-pages": "^0.12.0",
     "tslint": "^4.5.1",
     "xstream": "^10.3.0"
