--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "prettier": "^1.4.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "snabbdom-pragma": "^1.7.0",
     "typescript": "^2.2.1",
+    "tslint": "^4.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
@@ -34,7 +36,6 @@
     "@cycle/run": "^3.0.0",
     "@cycle/time": "^0.7.3",
     "gh-pages": "^0.12.0",
-    "tslint": "^4.5.1",
     "xstream": "^10.3.0"
   },
   "scripts": {
@@ -42,7 +43,8 @@
     "test": "node scripts/test.js",
     "build": "node scripts/build.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "format": "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'"
   },
   "jest": {
     "collectCoverageFrom": [
