--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "babili-webpack-plugin": "0.0.11",
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.4",
     "jest": "^19.0.2",
+    "lint-staged": "^3.6.1",
     "prettier": "^1.4.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "snabbdom-pragma": "^1.7.0",
-    "typescript": "^2.2.1",
     "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
@@ -45,7 +47,14 @@
     "build": "node scripts/build.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "format": "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'"
+    "format": "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,js,scss}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
