--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://olpeh.github.io/meeting-price-calculator",
   "devDependencies": {
+    "@types/jest": "^19.2.4",
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/extract-text2": "^0.4.0",
@@ -21,11 +22,13 @@
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.4",
-    "jest": "^19.0.2",
+    "jest": "^20.0.4",
+    "jsverify": "^0.8.2",
     "lint-staged": "^3.6.1",
     "prettier": "^1.4.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "snabbdom-pragma": "^1.7.0",
+    "ts-jest": "^20.0.6",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
@@ -62,6 +65,16 @@
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/(build|docs|node_modules|scripts)/"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "./node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
     ]
   }
 }
