--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "test": "node scripts/test.js",
+    "test-no-watch": "node scripts/test.js --no-watch",
     "build": "node scripts/build.js",
-    "predeploy": "npm run build",
+    "predeploy": "npm run test-no-watch && npm run build",
     "deploy": "gh-pages -d build",
     "format": "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
     "precommit": "lint-staged"
