--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-env": "^1.2.2",
     "babili-webpack-plugin": "0.0.11",
     "copy-webpack-plugin": "^4.0.1",
+    "cyclejs-test-helpers": "^1.3.0",
+    "html-looks-like": "^1.0.3",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
@@ -28,6 +30,7 @@
     "prettier": "^1.4.2",
     "progress-bar-webpack-plugin": "^1.9.3",
     "snabbdom-pragma": "^1.7.0",
+    "snabbdom-to-html": "^3.2.0",
     "ts-jest": "^20.0.6",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
