--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@cycle/time": "^0.7.3",
     "cycle-onionify": "^3.3.0",
     "gh-pages": "^0.12.0",
+    "moment": "^2.18.1",
     "xstream": "^10.3.0"
   },
   "scripts": {
