--- a/package.json
+++ b/package.json
@@ -4,50 +4,50 @@
   "private": true,
   "homepage": "https://olpeh.github.io/meeting-price-calculator",
   "devDependencies": {
-    "@types/jest": "^19.2.4",
-    "@webpack-blocks/babel6": "^0.4.1",
-    "@webpack-blocks/dev-server2": "^0.4.0",
-    "@webpack-blocks/extract-text2": "^0.4.0",
-    "@webpack-blocks/postcss": "^0.4.2",
-    "@webpack-blocks/sass": "^0.4.0",
-    "@webpack-blocks/tslint": "^0.4.0",
-    "@webpack-blocks/typescript": "^0.4.0",
-    "@webpack-blocks/webpack2": "^0.4.0",
-    "autoprefixer": "^6.7.7",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-react-jsx": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
-    "babili-webpack-plugin": "0.0.11",
-    "copy-webpack-plugin": "^4.0.1",
-    "cyclejs-test-helpers": "^1.3.0",
-    "html-looks-like": "^1.0.3",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.4",
-    "jest": "^20.0.4",
-    "jsverify": "^0.8.2",
-    "lint-staged": "^3.6.1",
-    "prettier": "^1.5.2",
-    "progress-bar-webpack-plugin": "^1.9.3",
-    "snabbdom-pragma": "^1.7.0",
-    "snabbdom-to-html": "^3.2.0",
-    "ts-jest": "^20.0.6",
-    "tslint": "^4.5.1",
-    "typescript": "^2.3.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "@types/jest": "20.0.2",
+    "@webpack-blocks/babel6": "0.4.1",
+    "@webpack-blocks/dev-server2": "0.4.0",
+    "@webpack-blocks/extract-text2": "0.4.0",
+    "@webpack-blocks/postcss": "0.4.3",
+    "@webpack-blocks/sass": "0.4.1",
+    "@webpack-blocks/tslint": "0.4.0",
+    "@webpack-blocks/typescript": "0.4.1",
+    "@webpack-blocks/webpack2": "0.4.0",
+    "autoprefixer": "7.1.2",
+    "babel-plugin-transform-custom-element-classes": "0.1.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "babili-webpack-plugin": "0.1.2",
+    "copy-webpack-plugin": "4.0.1",
+    "cyclejs-test-helpers": "1.3.0",
+    "html-looks-like": "1.0.3",
+    "html-webpack-plugin": "2.29.0",
+    "husky": "0.14.3",
+    "jest": "20.0.4",
+    "jsverify": "0.8.2",
+    "lint-staged": "4.0.1",
+    "prettier": "1.5.2",
+    "progress-bar-webpack-plugin": "1.10.0",
+    "snabbdom-pragma": "2.4.0",
+    "snabbdom-to-html": "3.2.0",
+    "ts-jest": "20.0.7",
+    "tslint": "5.5.0",
+    "typescript": "2.3.4",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.5.1"
   },
   "dependencies": {
-    "@cycle/dom": "^16.0.0",
-    "@cycle/http": "^13.2.0",
-    "@cycle/isolate": "^2.1.0",
-    "@cycle/run": "^3.0.0",
-    "@cycle/storage": "^4.0.0",
-    "@cycle/time": "^0.7.3",
-    "cycle-onionify": "^3.3.0",
-    "gh-pages": "^0.12.0",
-    "moment": "^2.18.1",
-    "xstream": "^10.3.0"
+    "@cycle/dom": "17.6.0",
+    "@cycle/http": "13.3.0",
+    "@cycle/isolate": "3.0.0",
+    "@cycle/run": "3.1.0",
+    "@cycle/storage": "4.0.0",
+    "@cycle/time": "0.8.0",
+    "cycle-onionify": "3.3.0",
+    "gh-pages": "0.12.0",
+    "moment": "2.18.1",
+    "xstream": "10.3.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
