--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
-    "@cycle/storage": "4.0.0",
     "@cycle/dom": "18.3.0",
     "@cycle/http": "14.3.0",
     "@cycle/isolate": "3.1.0",
     "@cycle/run": "3.2.0",
+    "@cycle/storage": "4.0.0",
     "@cycle/time": "0.8.0",
     "cycle-onionify": "3.3.0",
+    "cycle-storageify": "3.2.0",
     "gh-pages": "1.0.0",
     "moment": "2.18.1",
     "xstream": "10.9.0"
