--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsverify": "0.8.2",
     "lint-staged": "4.1.2",
     "prettier": "1.6.1",
+    "pretty-format-snabbdom": "1.0.0",
     "progress-bar-webpack-plugin": "1.10.0",
     "snabbdom-pragma": "2.4.0",
     "snabbdom-to-html": "3.2.0",
@@ -48,7 +49,6 @@
     "cycle-storageify": "3.2.0",
     "gh-pages": "1.0.0",
     "moment": "2.18.1",
-    "pretty-format-snabbdom": "^1.0.0",
     "xstream": "10.9.0"
   },
   "scripts": {
