--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ branches:
   only:
   - master
   - /^greenkeeper/.*$/
+before_install: yarn global add greenkeeper-lockfile@1
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
 notifications:
   email: true
 script:
