Fix the broken webpack config

--- a/package.json
+++ b/package.json
@@ -53,29 +53,44 @@
     "build": "node scripts/build.js",
     "predeploy": "npm run no-watch-test && npm run build",
     "deploy": "gh-pages -d build",
-    "format":
-      "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
+    "format": "prettier --single-quote --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.{ts,js,scss}": ["prettier --single-quote --write", "git add"]
+    "*.{ts,js,scss}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/scripts/assetsTransformer.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/scripts/assetsTransformer.js"
     },
-    "collectCoverageFrom": ["src/**/*.{!d.ts, ts, tsx, js,jsx}"],
-    "testPathIgnorePatterns": ["<rootDir>/(build|docs|node_modules|scripts)/"],
+    "collectCoverageFrom": [
+      "src/**/*.{!d.ts, ts, tsx, js,jsx}"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/(build|docs|node_modules|scripts)/"
+    ],
     "transform": {
       "^.+\\.tsx?$": "./node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "json"],
-    "snapshotSerializers": ["pretty-format-snabbdom"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "snapshotSerializers": [
+      "pretty-format-snabbdom"
+    ]
   },
   "greenkeeper": {
-    "ignore": ["webpack", "webpack-dev-server"]
+    "ignore": [
+      "webpack",
+      "webpack-dev-server"
+    ]
   }
 }
