--- a/package.json
+++ b/package.json
@@ -4,47 +4,53 @@
   "private": true,
   "homepage": "https://olpeh.github.io/meeting-price-calculator",
   "devDependencies": {
-    "@types/jest": "22.2.0",
-    "@webpack-blocks/tslint": "1.0.0-rc",
-    "autoprefixer": "8.1.0",
+    "@types/jest": "20.0.8",
+    "@webpack-blocks/babel6": "0.4.1",
+    "@webpack-blocks/dev-server2": "0.4.0",
+    "@webpack-blocks/extract-text2": "0.4.0",
+    "@webpack-blocks/postcss": "0.4.3",
+    "@webpack-blocks/sass": "0.4.1",
+    "@webpack-blocks/tslint": "0.4.0",
+    "@webpack-blocks/typescript": "0.4.1",
+    "@webpack-blocks/webpack2": "0.4.0",
+    "autoprefixer": "7.1.3",
     "babel-plugin-transform-custom-element-classes": "0.1.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.6.0",
     "babili-webpack-plugin": "0.1.2",
-    "copy-webpack-plugin": "4.5.1",
-    "cyclejs-test-helpers": "1.5.1",
-    "gh-pages": "1.1.0",
+    "copy-webpack-plugin": "4.0.1",
+    "cyclejs-test-helpers": "1.4.0",
     "html-looks-like": "1.0.3",
-    "html-webpack-plugin": "3.0.6",
+    "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "jest": "22.4.2",
-    "jsverify": "0.8.3",
-    "lint-staged": "7.0.0",
-    "prettier": "1.11.1",
+    "jest": "21.0.1",
+    "jsverify": "0.8.2",
+    "lint-staged": "4.1.2",
+    "prettier": "1.6.1",
     "pretty-format-snabbdom": "1.0.0",
-    "progress-bar-webpack-plugin": "1.11.0",
-    "snabbdom-pragma": "2.6.0",
-    "snabbdom-to-html": "5.1.0",
-    "ts-jest": "22.4.1",
-    "tslint": "5.9.1",
-    "typescript": "2.7.2",
+    "progress-bar-webpack-plugin": "1.10.0",
+    "snabbdom-pragma": "2.4.0",
+    "snabbdom-to-html": "3.2.0",
+    "ts-jest": "21.0.0",
+    "tslint": "5.7.0",
+    "typescript": "2.5.2",
     "webpack": "3.5.6",
     "webpack-blocks": "1.0.0-rc.2",
     "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
-    "@cycle/dom": "20.2.0",
-    "@cycle/http": "14.9.0",
-    "@cycle/isolate": "3.2.0",
-    "@cycle/run": "4.1.0",
-    "@cycle/storage": "5.0.3",
-    "@cycle/time": "0.13.0",
-    "cycle-onionify": "5.0.0",
-    "cycle-storageify": "4.0.1",
-    "moment": "2.21.0",
-    "typestyle": "1.7.2",
-    "xstream": "11.2.0"
+    "@cycle/dom": "18.3.0",
+    "@cycle/http": "14.3.0",
+    "@cycle/isolate": "3.1.0",
+    "@cycle/run": "3.2.0",
+    "@cycle/storage": "4.0.0",
+    "@cycle/time": "0.8.0",
+    "cycle-onionify": "3.3.0",
+    "cycle-storageify": "3.2.0",
+    "gh-pages": "1.0.0",
+    "moment": "2.18.1",
+    "xstream": "10.9.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
