--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@webpack-blocks/typescript": "0.4.1",
     "@webpack-blocks/webpack2": "0.4.0",
     "autoprefixer": "7.1.3",
+    "awesome-typescript-loader": "4.0.0",
     "babel-plugin-transform-custom-element-classes": "0.1.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-polyfill": "6.26.0",
@@ -34,7 +35,8 @@
     "snabbdom-to-html": "3.2.0",
     "ts-jest": "21.0.0",
     "tslint": "5.7.0",
-    "typescript": "2.5.2",
+    "typescript": "2.8.1",
+    "typestyle": "2.0.1",
     "webpack": "3.5.6",
     "webpack-blocks": "1.0.0-rc.2",
     "webpack-dev-server": "2.7.1"
@@ -60,15 +62,13 @@
     "build": "node scripts/build.js",
     "predeploy": "npm run no-watch-test && npm run build",
     "deploy": "gh-pages -d build",
-    "format": "prettier --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
+    "format":
+      "prettier --write  'src/**/**/*.ts' 'src/**/*.ts' 'src/*.ts' 'src/css/*.scss'",
     "precommit": "lint-staged",
     "prepush": "npm run lint && npm run no-watch-test"
   },
   "lint-staged": {
-    "*.{ts, tsx, js, scss, css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{ts, tsx, js, scss, css}": ["prettier --write", "git add"]
   },
   "jest": {
     "moduleNameMapper": {
